--- a/themes/bmw/layout/_partial/navigation.ejs
+++ b/themes/bmw/layout/_partial/navigation.ejs
@@ -2,37 +2,34 @@
   <header>
     <div class="site-brand">
       <div class="site-title">
-        <a href="<%- url_for('/') %>"><%= theme.nav_name || 'GODBMW.com'%></a>
+        <a href="<%- url_for('/') %>">
+          <%= theme.nav_name || 'hhongwen.com'%></a>
+        <span>--吾生有涯，而知也无涯。</span>
       </div>
     </div>
     <nav class="site-navigation">
       <ul class="nav-menu">
-      <% for(let link of theme.nav){ %>
+        <% for(let link of theme.nav){ %>
         <li class="nav-item" data-path="<%- link.path %>">
           <% if(!link.children) { %>
-            <a 
-              href="<%- url_for(link.path) %>"
-              target="<%- link.blank ? '_blank' : '_self' %>"
-            >
-              <%- link.name %>
-            </a>
+          <a href="<%- url_for(link.path) %>" target="<%- link.blank ? '_blank' : '_self' %>">
+            <%- link.name %>
+          </a>
           <% } else { %>
-            <a href="javascript:void(0);" v-else><%- link.name %></a>
-            <ul class="nav-menu--dropdown">
-              <% for(let childrenLink of link.children){ %>
-                <li>
-                  <a 
-                    href="<%- url_for(childrenLink.path)%>" 
-                    target="<%- childrenLink.blank ? '_blank' : '_self' %>"
-                  >
-                    <%- childrenLink.name %>
-                  </a>
-                </li>
-              <% } %>
-            </ul>
+          <a href="javascript:void(0);" v-else>
+            <%- link.name %></a>
+          <ul class="nav-menu--dropdown">
+            <% for(let childrenLink of link.children){ %>
+            <li>
+              <a href="<%- url_for(childrenLink.path)%>" target="<%- childrenLink.blank ? '_blank' : '_self' %>">
+                <%- childrenLink.name %>
+              </a>
+            </li>
+            <% } %>
+          </ul>
           <% } %>
         </li>
-      <% } %>
+        <% } %>
       </ul>
     </nav>
     <i class="iconfont icon-menu"></i>
@@ -41,23 +38,23 @@
 
 <script>
   let links = document.querySelectorAll('.nav-item');
-  for(let link of links){
+  for (let link of links) {
     let childrenLink = link.querySelector('ul');
     link.addEventListener('mouseenter', () => {
-      if(childrenLink) {
+      if (childrenLink) {
         childrenLink.className = "nav-menu--dropdown active";
       }
     })
     link.addEventListener('mouseleave', () => {
-      if(childrenLink) {
+      if (childrenLink) {
         childrenLink.className = "nav-menu--dropdown";
       }
     })
   }
   let rootRealPath = getRealPath(window.location.pathname, true);
-  for(let link of links) {
+  for (let link of links) {
     let linkPath = link.getAttribute("data-path");
-    if(linkPath && getRealPath(linkPath, true) === rootRealPath) {
+    if (linkPath && getRealPath(linkPath, true) === rootRealPath) {
       link.className = "nav-item hover";
     }
   }
@@ -66,7 +63,7 @@
     iconMenuClicked = false;
   let navDOM = document.querySelector("nav.site-navigation");
   iconMenu.addEventListener("click", () => {
-    iconMenuClicked 
+    iconMenuClicked
       ? navDOM.className = "site-navigation active"
       : navDOM.className = "site-navigation";
     iconMenuClicked = !iconMenuClicked;
