--- a/themes/bmw/source/css/base.css
+++ b/themes/bmw/source/css/base.css
@@ -80,6 +80,10 @@ header {
       font-weight: 333;
       font-family: "Sakura";
       text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); }
+      .site-brand .site-title span{
+        margin: 0;
+        font-size: 1.5rem;
+        transition: all 0.1s linear; }
 
 .site-navigation {
   text-align: center;
