--- a/themes/bmw/layout/_partial/footer.ejs
+++ b/themes/bmw/layout/_partial/footer.ejs
@@ -7,6 +7,7 @@
     <% if(theme.footer.more){ %>
       <%- theme.footer.more %>
     <% } %>
+    <a href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" target="_blank" rel="nofollow" class="slide slide-ct" hotrep="hp.footer.bottom.miitbeian">辽ICP备18014011号</a>
   </p>
 </footer>
 
