add baidu site manager

--- a/themes/bmw/layout/_partial/header.ejs
+++ b/themes/bmw/layout/_partial/header.ejs
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="韩洪文hhongwenn@gmail.com" />
+  <meta name="baidu-site-verification" content="jvQBmubUvS" />
   <% if(is_home() && page.current > 1){ %>
   <meta name="robots" content="noindex" />
   <% } %>
