--- a/themes/bmw/layout/post.ejs
+++ b/themes/bmw/layout/post.ejs
@@ -29,7 +29,7 @@
       <p class="card-header">
         @ <a href="<%- friend.site %>" target="_blank"><%- friend.nickname %></a>
       </p>
-      <p class="card-meta">
+      <p class="card-meta" title="<%- friend.meta %>">
         <%- friend.meta %>
       </p>
     </div>
