--- a/themes/bmw/source/scss/layout/home.scss
+++ b/themes/bmw/source/scss/layout/home.scss
@@ -1,7 +1,8 @@
 .container.home-index {
   .article-content--inner {
     img {
-      max-width: 300px !important;
+      // max-width: 300px !important;
+      max-width: 90% !important;
     }
   }
   
