--- a/themes/bmw/source/css/base.css
+++ b/themes/bmw/source/css/base.css
@@ -382,7 +382,7 @@ header {
   height: 0; }
 
 .container.home-index .article-content--inner img {
-  max-width: 90% !important; }
+  max-width: 90% !important; max-height: 300px;}
 .container.home-index .pc-view {
   display: block; }
 .container.home-index .article-meta .pc-view {
