edit archive title

--- a/themes/bmw/layout/component/timeline.ejs
+++ b/themes/bmw/layout/component/timeline.ejs
@@ -4,7 +4,7 @@
     <% if(!is_archive()){ %>
       <span>当前位于 <%- page.current%>/<%- page.total -%> 页</span>
     <% }else{ %>
-      <span>Wow! 一共有 <%- site.posts.length %> 篇文章</span>
+      <span>我已经写了 <%- site.posts.length %> 篇文章，每一篇都是前进的脚印。</span>
     <% } %>
   </span>
   <% 
