--- a/themes/bmw/layout/layout.ejs
+++ b/themes/bmw/layout/layout.ejs
@@ -9,6 +9,12 @@
       <span id="toolbox-mobile" class="toolbox-mobile"><%=  theme.toolbox.text %></span>
     <% } %>
 
+    <a href="https://github.com/HongwenHan"><img src="../../images/o_github_left.png" class="fork_github" style="position: fixed;
+      top: 0;
+      left: 0;
+      border: 0;
+      z-index: 9999;"/></a>
+
     <div id="app">
 
       <%- partial("_partial/navigation") %>
