edit github image show

--- a/themes/bmw/layout/_partial/navigation.ejs
+++ b/themes/bmw/layout/_partial/navigation.ejs
@@ -3,8 +3,9 @@
     <div class="site-brand">
       <div class="site-title">
         <a href="<%- url_for('/') %>">
-          <%= theme.nav_name || 'hhongwen.com'%></a>
-        <span>--吾生有涯，而知也无涯。</span>
+          <%= theme.nav_name || 'hhongwen.com'%>
+          <span>-- 吾生有涯，而知也无涯。</span>
+        </a>
       </div>
     </div>
     <nav class="site-navigation">
