--- a/themes/bmw/source/css/base.css
+++ b/themes/bmw/source/css/base.css
@@ -23,7 +23,7 @@ p.site-info {
   display: inline-block;
   margin: 0 5px; }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   footer {
     margin: 0 -1.5rem; } }
 .header-wrap {
@@ -40,7 +40,7 @@ p.site-info {
 .sidebar-active .header-wrap {
   width: calc(100% - 250px); }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   .sidebar-active .header-wrap {
     width: calc(100% - 200px); } }
 header {
@@ -79,11 +79,12 @@ header {
       color: #000;
       font-weight: 333;
       font-family: "Sakura";
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); }
+      text-shadow: 0px 0px 0px rgba(33, 33, 33, 1); }
       .site-brand .site-title span{
         margin: 0;
         font-size: 1.5rem;
-        transition: all 0.1s linear; }
+        color: #888
+      }
 
 .site-navigation {
   text-align: center;
@@ -127,7 +128,7 @@ header {
     width: 130px;
     box-shadow: 0px 2px 3px rgba(25, 25, 25, 0.1); }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   header {
     position: relative; }
     header .site-brand {
@@ -331,7 +332,7 @@ header {
   transition: 0.15s;
   position: relative; }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   #app {
     padding: 2.5rem 1.5rem 0; } }
 .back-to-top {
@@ -369,7 +370,7 @@ header {
   width: 250px;
   overflow-y: auto; }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   #app.sidebar-active {
     margin-right: 200px; }
 
@@ -389,7 +390,7 @@ header {
   display: inline-block; }
 .container.home-index .mobile-view {
   display: none; }
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   .container.home-index .pc-view {
     display: none !important; }
   .container.home-index .mobile-view {
@@ -450,7 +451,7 @@ header {
   .comment-title .iconfont {
     font-size: 1em; }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   .comment-title {
     margin-top: 5rem; } }
 .container.tag-index .tag-list-item, .container.category-index .category-list-item {
@@ -586,19 +587,19 @@ header {
     text-overflow: ellipsis;
     letter-spacing: 0.15rem; }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   .card {
     float: none !important;
     margin: 0 auto 1.6rem !important; } }
 .friend-index .markdown-body {
   margin-bottom: 3rem; }
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   .friend-index #vcomments {
     margin-top: 5rem !important; } }
 
 .about-index .markdown-body {
   margin-bottom: 3rem; }
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   .about-index #vcomments {
     margin-top: 5rem !important; } }
 
@@ -869,7 +870,7 @@ header {
       border-bottom: 1px solid #999 !important;
       word-wrap: break-word !important; }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   .post {
     padding: 3.5rem 0; } }
 .post:not(:first-child)::before {
@@ -999,7 +1000,7 @@ header {
     #sidebar ol .toc-h6 {
       padding-left: 60px; }
 
-@media (max-width: 768px) {
+@media (max-width: 805px) {
   #sidebar {
     padding: 1rem 0; }
     #sidebar p:first-child {
@@ -1043,14 +1044,33 @@ a:hover {
 
 /*# sourceMappingURL=base.css.map */
 .fork_github {
-  display: none;}
-@media (min-width: 1450px) {
+  display: none;
+  }
+  .fork_github svg{
+    fill: #15151375;
+    color: #ffffff6e;
+    position: fixed; 
+    top: 0; 
+    border: 0; 
+    left: 0; 
+    z-index:9999; 
+    -webkit-transform: rotate(270deg);
+  }
+@media (min-width: 1100px) {
+  .fork_github svg {
+    fill:#151513; 
+    color:#fff; 
+    position: fixed; 
+    top: 0; 
+    border: 0; 
+    left: 0; 
+    z-index:9999; 
+    -webkit-transform: rotate(270deg);
+  }
+}
+
+@media (min-width: 805px) {
   .fork_github{
     display: inline;
-    position: fixed;
-    top: 0;
-    left: 0;
-    border: 0;
-    z-index: 9999;
   }
 }
