--- a/themes/bmw/source/css/base.css
+++ b/themes/bmw/source/css/base.css
@@ -1056,6 +1056,7 @@ a:hover {
     z-index:9999; 
     -webkit-transform: rotate(270deg);
   }
+
 @media (min-width: 1100px) {
   .fork_github svg {
     fill:#151513; 
@@ -1074,3 +1075,4 @@ a:hover {
     display: inline;
   }
 }
+.fork_github:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
